<resources>
    <string name="app_name">RecycLens</string>
    <string name="app_tagline">Learn to Sort Waste!</string>
    <string name="start_button">START</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_back">Back</string>
    <string name="action_play_again">Play again</string>
    <string name="action_try_again">Try again</string>
    <string name="action_done">Done</string>
    <string name="action_next_non_bio">Next (Non-bio)</string>
    <string name="action_back_bio">Back (Bio)</string>
    <string name="action_start_game">Start Game</string>
    <string name="status_sorting">Sorting...</string>
    <string name="status_time_running">Time running...</string>
    <string name="status_play_again">Play Again</string>
    <string name="feedback_correct">Correct!</string>
    <string name="feedback_drop_bin">Drop the trash inside the green or blue bin.</string>
    <string name="feedback_trash_correct_green">%1$s should go in the green bin.</string>
    <string name="feedback_trash_correct_blue">%1$s should go in the blue bin.</string>
    <string name="score_progress_format">Score: %1$d / %2$d</string>
    <string name="score_result_format">Correct: %1$d  |  Wrong: %2$d</string>
    <string name="time_format">Time: %1$02d</string>
    <string name="time_left_format">Time left: %1$d second(s)</string>
    <string name="time_used_format">Time used: %1$d second(s)</string>
    <string name="dialog_good_work">Good work!</string>
    <string name="dialog_level_complete">Level complete!</string>
    <string name="dialog_level_complete_message_with_level">You finished the %1$s level!\n\n%2$s\n%3$s</string>
    <string name="dialog_time_up">Oh no!</string>
    <string name="dialog_time_up_message">The drains got blocked and the street flooded because some trash was left.\n\n%1$s\n%2$s\n\nTry again and clean everything before the time runs out!</string>
    <string name="dialog_low_score_message">Some trash went into the wrong bin, so the drains still got blocked and the street flooded.\n\n%1$s\n%2$s</string>
    <string name="dialog_level_fail_title">Oh no!</string>
    <string name="dialog_level_fail_message">You sorted all %1$d items, but some went into the wrong bin. You got %2$d correct and %3$d wrong. Try again to improve your score.</string>
    <string name="label_en">EN</string>
    <string name="label_tl">TL</string>
    <string name="label_easy">Easy</string>
    <string name="label_medium">Medium</string>
    <string name="label_hard">Hard</string>
    <string name="label_score">Score: 0</string>
    <string name="label_time_zero">Time: 00</string>
    <string name="label_scan_trash">Scan Trash</string>
    <string name="label_play_games">Play Games</string>
    <string name="label_scan_trash_en">Scan Trash</string>
    <string name="label_scan_trash_tl">I-scan ang Basura</string>
    <string name="label_play_games_en">Play Games</string>
    <string name="label_play_games_tl">Maglaro</string>
    <string name="label_choose_level">Choose Your\nLevel!</string>
    <string name="label_choose_level_en">Choose Your\nLevel!</string>
    <string name="label_choose_level_tl">Piliin ang\nLevel!</string>
    <string name="label_choose_level_street">Choose Your\nLevel!\n(Street Cleanup)</string>
    <string name="label_choose_level_trash">Choose Your\nLevel!\n(Trash Sorting)</string>
    <string name="label_choose_level_street_en">Choose Your\nLevel!\n(Street Cleanup)</string>
    <string name="label_choose_level_street_tl">Piliin ang\nLevel!\n(Paglilinis ng Kalsada)</string>
    <string name="label_choose_level_trash_en">Choose Your\nLevel!\n(Trash Sorting)</string>
    <string name="label_choose_level_trash_tl">Piliin ang\nLevel!\n(Paghihiwalay ng Basura)</string>
    <string name="label_trash_sorting">Trash Sorting</string>
    <string name="label_street_cleanup">Street Cleanup</string>
    <string name="label_choose_sample_item">Choose a sample item</string>
    <string name="desc_easy">Learn and play at your own pace!</string>
    <string name="desc_medium">Sort a little faster!</string>
    <string name="desc_hard">Test what you\'ve learned!</string>
    <string name="label_easy_en">Easy</string>
    <string name="label_easy_tl">Madali</string>
    <string name="label_medium_en">Medium</string>
    <string name="label_medium_tl">Katamtaman</string>
    <string name="label_hard_en">Hard</string>
    <string name="label_hard_tl">Mahirap</string>
    <string name="desc_easy_en">Learn and play at your own pace!</string>
    <string name="desc_easy_tl">Maglaro at matuto sa sariling bilis!</string>
    <string name="desc_medium_en">Sort a little faster!</string>
    <string name="desc_medium_tl">Bilis-bilisan nang kaunti!</string>
    <string name="desc_hard_en">Test what you\'ve learned!</string>
    <string name="desc_hard_tl">Subukan ang natutunan mo!</string>
    <string name="bin_green_bio">Green Bin - Biodegradable</string>
    <string name="bin_blue_non_bio">Blue Bin - Non-biodegradable</string>
    <string name="bin_green_bio_cap">Green Bin - Biodegradable</string>
    <string name="bin_blue_non_bio_cap">Blue Bin - Non-biodegradable</string>
    <string name="category_biodegradable">Biodegradable</string>
    <string name="category_non_biodegradable">Non-biodegradable</string>
    <string name="category_biodegradable_en">Biodegradable</string>
    <string name="category_biodegradable_tl">Nabubulok</string>
    <string name="category_non_biodegradable_en">Non-biodegradable</string>
    <string name="category_non_biodegradable_tl">Di-nabubulok</string>
    <string name="category_di_nabubulok">Di-Nabubulok</string>
    <string name="category_nabubulok">Nabubulok</string>
    <string name="category_unknown">Unknown item</string>
    <string name="category_unknown_tl">Hindi kilala</string>
    <string name="scanner_camera_ready">Camera Ready</string>
    <string name="scanner_handa_ang_camera">Handa ang Camera</string>
    <string name="scanner_scan_a_trash_item">Scan a trash item</string>
    <string name="scanner_i_scan_ang_basura">I-scan ang basura</string>
    <string name="scanner_camera_ready_desc">Point camera at waste, pick from gallery, or use a sample image.</string>
    <string name="scanner_camera_ready_desc_tl">Itutok ang camera, pumili sa gallery, o gumamit ng sample image.</string>
    <string name="scanner_try_another_desc">Try another photo, choose from gallery, or use a sample image.</string>
    <string name="scanner_try_another_desc_tl">Subukan ang ibang larawan, pumili sa gallery, o gumamit ng sample image.</string>
    <string name="scanner_taking_picture">Taking a picture...</string>
    <string name="scanner_kumukuha_ng_larawan">Kumukuha ng larawan...</string>
    <string name="scanner_looking_closely">Looking closely...</string>
    <string name="scanner_tinitingnan_mabuti">Tinitingnan ko mabuti...</string>
    <string name="scanner_analyzing">Analyzing</string>
    <string name="scanner_sinusuri">Sinusuri</string>
    <string name="scanner_checking_waste">I'm checking what kind of waste this is.</string>
    <string name="scanner_checking_waste_tl">Tinitingnan ko kung anong uri ng basura ito.</string>
    <string name="scanner_opps_try_again">Oops, try again!</string>
    <string name="scanner_ay_ulitin">Ay, ulitin natin!</string>
    <string name="scanner_camera_not_ready">Camera not ready</string>
    <string name="scanner_unable_capture">Unable to capture picture</string>
    <string name="scanner_hindi_makuha">Hindi makuha ang larawan</string>
    <string name="scanner_could_not_open_image">Could not open image</string>
    <string name="scanner_hindi_mabuksan">Hindi mabuksan ang larawan</string>
    <string name="scanner_voice_not_ready">Voice guide is not ready yet.</string>
    <string name="scanner_voice_not_ready_tl">Hindi pa handa ang voice guide.</string>
    <string name="scanner_scan_first">Scan a trash item first.</string>
    <string name="scanner_scan_first_tl">Mag-scan muna ng basura.</string>
    <string name="scanner_using_sample">Using sample image...</string>
    <string name="scanner_gumagamit_sample">Gumagamit ng sample image...</string>
    <string name="scanner_load_sample_fail">Could not load sample image</string>
    <string name="scanner_load_sample_fail_tl">Hindi ma-load ang sample image</string>
    <string name="scanner_camera_permission_required">Camera permission is required to scan items</string>
    <string name="scanner_camera_permission_required_tl">Kailangan ng camera permission para mag-scan</string>
    <string name="scanner_not_sure">I\'m not sure</string>
    <string name="scanner_hindi_sigurado">Hindi ako sigurado</string>
    <string name="scanner_throw_blue">Put this in the Blue Bin.</string>
    <string name="scanner_throw_green">Put this in the Green Bin.</string>
    <string name="scanner_itapon_blue">Itapon sa Blue Bin.</string>
    <string name="scanner_itapon_green">Itapon sa Green Bin.</string>
    <string name="scanner_confidence">Confidence: %1$d%%</string>
    <string name="scanner_confidence_tl">Katiyakan: %1$d%%</string>
    <string name="scanner_voice_play_error">Voice guide could not play.</string>
    <string name="scanner_voice_unavailable">Voice guide is unavailable on this device.</string>
    <string name="scanner_voice_loading">Voice guide is loading. Please tap again in a moment.</string>
    <string name="dialog_restart_game_title">Restart game?</string>
    <string name="dialog_restart_game_message">Do you want to reset the trash and the timer and start again?</string>
    <string name="dialog_restart_game_title_tl">Ulitin ang laro?</string>
    <string name="dialog_restart_game_message_tl">Gusto mo bang i-reset ang basura at timer at magsimula muli?</string>
    <string name="dialog_level_complete_title">Level complete!</string>
    <string name="dialog_level_complete_message">You finished the %1$s level!\n\n%2$s\n%3$s</string>
    <string name="dialog_level_complete_title_tl">Tapos na ang level!</string>
    <string name="dialog_level_complete_message_tl">Natapos mo ang %1$s level!\n\n%2$s\n%3$s</string>
    <string name="dialog_oh_no">Oh no!</string>
    <string name="dialog_try_again_short">Try again</string>
    <string name="dialog_level_result_message_time">The drains got blocked and the street flooded because some trash was left.\n\n%1$s\n%2$s\n\nTry again and clean everything before the time runs out!</string>
    <string name="dialog_level_result_message_low">Some trash went into the wrong bin, so the drains still got blocked and the street flooded.\n\n%1$s\n%2$s</string>
    <string name="dialog_choose_sample_title">Choose a sample item</string>
    <string name="dialog_choose_sample_title_tl">Pumili ng sample item</string>
    <string name="dialog_sample_image_error">Could not load sample image</string>
    <string name="dialog_sample_image_error_tl">Hindi ma-load ang sample image</string>
    <string name="street_intro">Street cleanup game started. Drag each trash item into the correct bin. Biodegradable trash goes into the green bin, and non biodegradable trash goes into the blue bin. Clean the street before the time runs out.</string>
    <string name="item_plastic_bottle">Plastic Bottle</string>
    <string name="cd_open_camera">Open camera</string>
    <string name="cd_open_gallery">Open gallery</string>
    <string name="info_title">Non-Biodegradable\nHindi Nabubulok</string>
    <string name="info_description">
        This is a Plastic Bottle. It is used to hold water or juice. Plastic bottles go to the non-biodegradable bin.
    </string>
</resources>